fixed <header> wrap issue

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,6 @@ img {
 
 header {
   background-color: #ff7a42;
-  height: 225px;
   width: 100%;
   background-clip: content-box;
   font-weight: 400;
@@ -77,7 +76,6 @@ header {
 
 #navigation li {
     display: inline;
-    padding: 175px;
 }
 
 .title {
